Bug 236138 - bulletproof startup against lack of some browser.startup.[...] prefs. r/sr=darin